--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Qt5 COMPONENTS Widgets Qml Quick REQUIRED)
+find_package(Qt5 COMPONENTS Widgets Qml Quick Sql REQUIRED)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -16,7 +16,12 @@ set(CMAKE_AUTOUIC ON)
 set(idcplc_SOURCES
     src/main.cpp
     src/highlighter.cpp
-    src/dragdrophandler.cpp)
+    src/dragdrophandler.cpp
+    
+    src/ActionProvider.cpp
+    src/CategoryEntryModel.cpp
+    src/SnippetEntryModel.cpp
+    )
 
 set(idcplc_HEADERS
     src/highlighter.h
@@ -26,7 +31,7 @@ qt5_add_resources(idcplc_RESOURCES qml.qrc resources.qrc)
 
 add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${idcplc_HEADERS} ${idcplc_SOURCES} ${idcplc_RESOURCES})
 
-target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::Qml Qt5::Quick)
+target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::Qml Qt5::Quick Qt5::Sql)
 
 target_compile_definitions(${PROJECT_NAME}
     PRIVATE ${Qt5Widgets_DEFINITIONS} ${QtQml_DEFINITIONS} ${${Qt5Quick_DEFINITIONS}}
